--- a/alles1.0/suche2-4.html
+++ b/alles1.0/suche2-4.html
@@ -70,6 +70,6 @@
             <div id="results" class="results"></div>
         </div>
     </div>
-    <script src="suche2-4.js"></script>
+    <script src="alles1.0/suche2-4.js"></script>
 </body>
 </html>
