--- a/suche2-3.html
+++ b/suche2-3.html
@@ -1,3 +1,5 @@
+<!-- Version 2.3 ohne Einstellung von Förderanteil und Förderhöhe im Suchauftrag, aber mit Einfügung in den Search Query via NEAR-Operator, sodass Ergebnisse, die die entsprechenden Angaben erhalten maginal preferiert werden und die entsprechenden Angaben häufiger in den Snippets der Ergebnisse auftauchen. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
