--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         
         <div class="search-orders">
             <div class="checkbox-group">
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Infrastruktur <a href="https://pdmmnn.github.io/infrastruktur.html">öffnen</a></label>
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2</label>
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3</label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Suchauftrag 1 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
             </div>
         </div>
 
