--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <input type="email" id="email" name="email" placeholder="...">
             <button type="button" onclick="showSearchOrders()">Suchaufträge anzeigen</button>
         </form>
-        
+
+    <!-- Liste bereits erstellter und aktiver Suchaufträge -->
         <div class="search-orders">
             <div class="checkbox-group">
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Suchauftrag 1 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Hafeninfrastruktur <a href="https://pdmmnn.github.io/Hafeninfrastruktur.html">öffnen</a></label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3 <a href="https://pdmmnn.github.io/index.html">öffnen</a></label>
             </div>
